--- a/paper1.ipynb
+++ b/paper1.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,6 +622,251 @@
     "plt.plot(Temp, color = 'blue')\n",
     "plt.plot(predictions,color='yellow')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Geometric Brownian Motion Model\n",
+    "S(ti+1) = S(ti) exp((μ −σ/2)+ σZi+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Date    Close     Open     High      Low   Output\n",
+      "0     02/24/2022  4288.70  4155.77  4294.73  4114.65  4221.51\n",
+      "1     02/23/2022  4225.50  4324.93  4341.51  4221.51  4267.11\n",
+      "2     02/22/2022  4304.76  4332.74  4362.12  4267.11  4327.22\n",
+      "3     02/18/2022  4348.87  4384.57  4394.60  4327.22  4373.81\n",
+      "4     02/17/2022  4380.26  4456.06  4456.06  4373.81  4429.68\n",
+      "...          ...      ...      ...      ...      ...      ...\n",
+      "2545  03/05/2012  1364.33  1369.59  1369.59  1359.13  1366.42\n",
+      "2546  03/02/2012  1369.63  1374.09  1374.53  1366.42  1365.90\n",
+      "2547  03/01/2012  1374.09  1365.90  1376.17  1365.90  1363.81\n",
+      "2548  02/29/2012  1365.68  1372.20  1378.04  1363.81  1365.97\n",
+      "2549  02/28/2012  1372.18  1367.56  1373.09  1365.97  1354.92\n",
+      "\n",
+      "[2550 rows x 6 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "SnP = pd.read_csv('Data.csv')\n",
+    "print(SnP)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Artificial Neural Network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow import keras"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average = SnP['Open'] + SnP['Close'] + SnP['High'] + SnP['Low']\n",
+    "Average = Average/4\n",
+    "Returns = [0]\n",
+    "Adjusted_Close_Price = SnP['Close']\n",
+    "for i in range(1,len(Adjusted_Close_Price)):\n",
+    "    Returns.append(Adjusted_Close_Price[i]/Adjusted_Close_Price[i-1])\n",
+    "Returns = np.array(Returns).reshape(-1,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Normalizing values\n",
+    "Returns = Returns/(max(Returns) + 1)\n",
+    "Average = Average/(max(Average) +1)\n",
+    "SnP['Open'] = SnP['Open']/max(SnP['Open'] + 1)\n",
+    "SnP['Close'] = SnP['Close']/max(SnP['Close']+1)\n",
+    "SnP['High'] = SnP['High']/max(SnP['High']+1)\n",
+    "SnP['Low'] = SnP['Low']/max(SnP['Low']+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.44705998 0.43248635 0.445639   0.43039912]\n",
+      " [0.44047192 0.45009064 0.45049309 0.44157685]\n",
+      " [0.44873409 0.45090342 0.45263167 0.44634668]\n",
+      " ...\n",
+      " [0.2389796  0.23876316 0.23826116 0.23938816]\n",
+      " [0.23948622 0.23816581 0.23848218 0.23931599]\n",
+      " [0.23775894 0.23693259 0.2369942  0.2376183 ]]\n",
+      "[[0.44047192]\n",
+      " [0.44873409]\n",
+      " [0.45333218]\n",
+      " ...\n",
+      " [0.23948622]\n",
+      " [0.23775894]\n",
+      " [0.23762342]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_train = [SnP['Close'][: 1275] , SnP['Open'][: 1275], SnP['High'][: 1275], SnP['Low'][: 1275]]\n",
+    "x_train = np.array(x_train).T\n",
+    "y_train = [SnP['Close'][1 : 1276]]\n",
+    "y_train = np.array(y_train).T\n",
+    "# print(len(x_train), len(y_train))\n",
+    "x_test = [SnP['Close'][1275 : 2551] , SnP['Open'][1275 : 2551], SnP['High'][1275 : 2551], SnP['Low'][1275 : 2551]]\n",
+    "y_test = [SnP['Close'][1276 :]]\n",
+    "y_test = np.array(y_test).T\n",
+    "x_test = np.array(x_test).T\n",
+    "print(x_train)\n",
+    "print(y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train_dataset = tf.data.Dataset.from_tensor_slices((x_train, y_train))\n",
+    "# test_dataset = tf.data.Dataset.from_tensor_slices((x_test, y_test))\n",
+    "BATCH_SIZE = 64\n",
+    "SHUFFLE_BUFFER_SIZE = 100\n",
+    "\n",
+    "train_dataset = train_dataset.shuffle(SHUFFLE_BUFFER_SIZE).batch(BATCH_SIZE)\n",
+    "test_dataset = test_dataset.batch(BATCH_SIZE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = keras.Sequential([\n",
+    "    keras.layers.InputLayer(4),  # input layer (1)\n",
+    "    keras.layers.Dense(15, activation='relu'),  # hidden layer (2)\n",
+    "    keras.layers.Dense(1) # output layer (3)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer='adam',\n",
+    "              loss='mse')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "40/40 [==============================] - 0s 1ms/step - loss: 4.5985e-05\n",
+      "Epoch 2/10\n",
+      "40/40 [==============================] - 0s 3ms/step - loss: 5.8093e-06\n",
+      "Epoch 3/10\n",
+      "40/40 [==============================] - 0s 3ms/step - loss: 4.2369e-06\n",
+      "Epoch 4/10\n",
+      "40/40 [==============================] - 0s 4ms/step - loss: 4.1898e-06\n",
+      "Epoch 5/10\n",
+      "40/40 [==============================] - 0s 2ms/step - loss: 4.0822e-06\n",
+      "Epoch 6/10\n",
+      "40/40 [==============================] - 0s 2ms/step - loss: 4.7812e-06\n",
+      "Epoch 7/10\n",
+      "40/40 [==============================] - 0s 2ms/step - loss: 4.2380e-06\n",
+      "Epoch 8/10\n",
+      "40/40 [==============================] - 0s 2ms/step - loss: 4.1724e-06\n",
+      "Epoch 9/10\n",
+      "40/40 [==============================] - 0s 2ms/step - loss: 4.1973e-06\n",
+      "Epoch 10/10\n",
+      "40/40 [==============================] - 0s 2ms/step - loss: 4.5915e-06\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7f5e649ff438>"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(x_train, y_train, epochs=10)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40/40 [==============================] - 0s 1ms/step - loss: 0.0011\n",
+      "[[0.23755254]\n",
+      " [0.23776415]\n",
+      " [0.23920164]\n",
+      " ...\n",
+      " [0.14236036]\n",
+      " [0.14303793]\n",
+      " [0.14255946]]\n",
+      "[[0.23885979]\n",
+      " [0.23761714]\n",
+      " [0.23883632]\n",
+      " ...\n",
+      " [0.14309548]\n",
+      " [0.1437194 ]\n",
+      " [0.14313102]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.evaluate(x_test,y_test, verbose=1)\n",
+    "predictions = model.predict(x_test)\n",
+    "print(y_test)\n",
+    "print(predictions)"
    ]
   },
   {
